--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -5,3 +5,28 @@
  	$opacity-ie: ($opacity * 100);
 	filter: alpha(opacity=$opacity-ie);
 }
+@mixin conten(){
+	width: 40px;
+	height: 130px;
+	position: absolute;
+	right: 50%;
+	margin-right: -20px;
+	top: 9px;
+	border: 2px solid $ensayo;
+	border-bottom-left-radius:15px ;
+	border-bottom-right-radius:15px ;
+}
+@mixin before($baground){
+	content:"";
+	width: 40px;
+	height: 0;
+	position: absolute;
+	right: 50%;
+	margin-right:-20px;
+	bottom: 0;
+	//top: 35px;
+	border: 2px solid $ensayo;
+	border-bottom-left-radius:15px ;
+	border-bottom-right-radius:15px ;
+	background: $baground;
+}
