--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -6,4 +6,5 @@ $bg-white:#fff;
 $text-color:#FF358B;
 $text-white:#fff;
 $black:#2C3E50;
-$ensayo:#2C3E50;
+$ensayo:rgba(44, 62, 80, 0.15);
+$bg-border:black;
