--- a/css/main.css
+++ b/css/main.css
@@ -5939,13 +5939,18 @@ a:hover {
   margin: 0 0 5px; }
 
 .Hero {
-  background-image: url("../img/hero6.jpg");
   background-attachment: fixed;
   background-size: cover; }
 
 .opacity {
-  background: rgba(0, 0, 0, 0.52);
-  height: 100vh; }
+  background: rgba(0, 0, 0, 0.09);
+  height: 100vh;
+  -ms-display: flex;
+  display: flex;
+  /* vertical center */
+  align-items: center;
+  /* horizontal center */
+  justify-content: center; }
 
 .nav-transp {
   background: transparent; }
@@ -5955,6 +5960,56 @@ a:hover {
   font-family: "Sigmar One";
   font-size: 3rem;
   padding-bottom: 30px; }
+
+.banner {
+  width: 50%; }
+  .banner .marco-pantalla {
+    border: 20px solid black;
+    border-radius: 15px;
+    width: 100%; }
+    .banner .marco-pantalla .cont-pantalla {
+      height: 400px; }
+      .banner .marco-pantalla .cont-pantalla .imagen1 {
+        width: 100%;
+        height: 400px;
+        background-image: url("../img/hero5.jpg");
+        background-size: cover;
+        position: relative; }
+        .banner .marco-pantalla .cont-pantalla .imagen1 .imagen2 {
+          background-image: url("../img/portfolio_1.png");
+          position: absolute;
+          background-size: cover;
+          top: 0;
+          left: 0;
+          height: 100%;
+          max-width: 100%;
+          resize: horizontal;
+          overflow: hidden; }
+        .banner .marco-pantalla .cont-pantalla .imagen1 .imagen2:before {
+          content: "\2194";
+          color: white;
+          font-size: 25px;
+          background: rgba(0, 0, 0, 0.7);
+          height: 100%;
+          position: absolute;
+          line-height: 400px;
+          right: 0;
+          top: 0; }
+        .banner .marco-pantalla .cont-pantalla .imagen1 textarea {
+          opacity: 0;
+          width: 20px;
+          height: 10px;
+          position: relative;
+          top: 50%;
+          transform: scaleY(40);
+          cursor: e-resize; }
+
+.teclado {
+  height: 0;
+  border-top: none;
+  border-bottom: none;
+  border-bottom: 25px solid black;
+  border-radius: 10px; }
 
 .global {
   margin-top: 150px;
@@ -6189,7 +6244,7 @@ a:hover {
     width: 60px;
     height: 10px;
     border-radius: 5px;
-    border: 2px solid #2C3E50; }
+    border: 2px solid rgba(44, 62, 80, 0.15); }
   .cont-habi .tubo {
     width: 40px;
     height: 130px;
@@ -6197,7 +6252,7 @@ a:hover {
     right: 50%;
     margin-right: -20px;
     top: 9px;
-    border: 2px solid #2C3E50;
+    border: 2px solid rgba(44, 62, 80, 0.15);
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px; }
   .cont-habi .id1:before {
@@ -6209,7 +6264,7 @@ a:hover {
     right: 50%;
     margin-right: -20px;
     bottom: 0;
-    border: 2px solid #2C3E50;
+    border: 2px solid rgba(44, 62, 80, 0.15);
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     background: red; }
@@ -6227,7 +6282,7 @@ a:hover {
     right: 50%;
     margin-right: -20px;
     bottom: 0;
-    border: 2px solid #2C3E50;
+    border: 2px solid rgba(44, 62, 80, 0.15);
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     background: green; }
@@ -6245,7 +6300,7 @@ a:hover {
     right: 50%;
     margin-right: -20px;
     bottom: 0;
-    border: 2px solid #2C3E50;
+    border: 2px solid rgba(44, 62, 80, 0.15);
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     background: yellow; }
@@ -6263,7 +6318,7 @@ a:hover {
     right: 50%;
     margin-right: -20px;
     bottom: 0;
-    border: 2px solid #2C3E50;
+    border: 2px solid rgba(44, 62, 80, 0.15);
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     background: violet; }
@@ -6281,7 +6336,7 @@ a:hover {
     right: 50%;
     margin-right: -20px;
     bottom: 0;
-    border: 2px solid #2C3E50;
+    border: 2px solid rgba(44, 62, 80, 0.15);
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     background: pink; }
@@ -6299,7 +6354,7 @@ a:hover {
     right: 50%;
     margin-right: -20px;
     bottom: 0;
-    border: 2px solid #2C3E50;
+    border: 2px solid rgba(44, 62, 80, 0.15);
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     background: rgba(241, 18, 129, 0.73); }
@@ -6317,7 +6372,7 @@ a:hover {
     right: 50%;
     margin-right: -20px;
     bottom: 0;
-    border: 2px solid #2C3E50;
+    border: 2px solid rgba(44, 62, 80, 0.15);
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     background: skyblue; }
@@ -6335,7 +6390,7 @@ a:hover {
     right: 50%;
     margin-right: -20px;
     bottom: 0;
-    border: 2px solid #2C3E50;
+    border: 2px solid rgba(44, 62, 80, 0.15);
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     background: blue; }
@@ -6346,22 +6401,28 @@ a:hover {
     height: 60px; } }
 #contacto {
   padding-top: 50px;
-  height: 540px;
+  height: 560px;
   background-image: url("../img/contacto4.jpg");
-  background-size: cover;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
   background-attachment: fixed;
   color: white; }
   #contacto .title {
     color: white; }
 
-.redes a {
-  display: inline-block;
-  width: 60px;
-  height: 60px;
-  color: white;
-  font-size: 60px; }
-.redes a:hover {
-  text-decoration: none; }
+.redes {
+  margin-top: 50px; }
+  .redes a {
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    color: white;
+    font-size: 60px;
+    margin: 35px; }
+  .redes a:hover {
+    text-decoration: none;
+    color: #33ccff; }
 
 footer {
   padding-top: 20px;
