--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -112,14 +112,21 @@
 }
 /// primer
 .Hero{
-	background-image: url('../img/hero6.jpg');
+	//background-image: url('../img/contacto1.jpg');
 	background-attachment: fixed;
 	
 	background-size: cover;
 }
 .opacity{
-	background: rgba(0, 0, 0, 0.52);
+	background: rgba(0, 0, 0, 0.09);
 	height: 100vh;
+	  -ms-display: flex;
+  display: flex;
+  /* vertical center */
+  align-items: center;
+  /* horizontal center */
+  justify-content: center;
+
 }
 .nav-transp {
 	background: transparent;
@@ -131,8 +138,67 @@
 	font-size: 3rem;
 	padding-bottom: 30px;
 }
-////
-/// hero-encender
+.banner{
+	width:50%;
+	.marco-pantalla{
+		border: 20px solid $bg-border;
+		border-radius:15px;
+    	width: 100%;
+    	.cont-pantalla{
+			height: 400px;
+	    	.imagen1{
+	    		width: 100%;
+	    		height: 400px;
+	    		background-image:url('../img/hero5.jpg');
+	    		background-size:cover;
+	    		position:relative;
+	    		.imagen2{
+	    			background-image:url('../img/portfolio_1.png');
+	    			position:absolute;
+	    			background-size:cover;
+	    			top:0;
+	    			left:0;
+	    			height:100%;
+	    			max-width: 100%;
+	    			resize: horizontal;
+	    			overflow: hidden;
+	    		}
+		    	.imagen2:before{
+					content:"\2194";
+					color:white;
+					font-size: 25px;
+					background:rgba(0,0,0,0.7);
+					height: 100%;
+					position:absolute;
+					line-height: 400px;
+					right: 0;
+					top:0;
+	    		}
+	    		textarea{
+					opacity: 0;
+					width: 20px;
+					height: 10px;
+					position:relative;
+					top:50%;
+					transform:scaleY(40);
+	    			cursor:e-resize;
+	    		}
+    		}
+	    		
+    		
+    	}
+
+    }
+
+}
+	.teclado{
+		height: 0;
+		border-top:none;
+		border-bottom:none;
+		border-bottom:25px solid $bg-border;
+		border-radius:10px;
+	}
+
 .global{
 	margin-top: 150px;
 	background:linear-gradient(#eee 50%,#333 50%);
@@ -518,9 +584,11 @@
 /// contacto
 #contacto{
 	padding-top: 50px;
-	height: 540px;
+	height: 560px;
 	background-image: url("../img/contacto4.jpg");
-	background-size: cover;
+	background-size: 100% 100%;
+	background-repeat:no-repeat;
+	background-position:center;
 	background-attachment: fixed;
 	color: white;
 	.title{
@@ -528,15 +596,19 @@
 	}
 }
 	.redes{
+		margin-top: 50px;
 		a{
 			display: inline-block;
-			width: 60px;
-			height: 60px;
+			width: 25px;
+			height: 25px;
 			color:white;
 			font-size: 60px;
+			margin: 35px;
 		}
 		a:hover{
 			text-decoration: none;
+			color:$bg-celeste;
+			
 		}
 	}
 //footer
