--- a/jade/index.jade
+++ b/jade/index.jade
@@ -4,6 +4,7 @@ html(lang="en")
 head
 	meta(charset="UTF-8")
 	title Sarita Coder
+	link(rel="stylesheet", href="css/animate.css")
 	link(rel="stylesheet", href="css/main.css")
 	link(rel="stylesheet", href="./font-awesome/css/font-awesome.min.css")
 body
@@ -16,7 +17,7 @@ body
 					span.icon-bar
 					span.icon-bar
 				a.navbar-brand(href='#hero')
-					span.logo
+					span.logo 
 			#collapse.navbar-collapse
 				ul.nav.navbar-nav.navbar-right
 					li.active
@@ -31,6 +32,9 @@ body
 	.Hero#hero
 		.opacity
 			.banner
+				.titulo
+					p.text-you.animated.fadeInDown Lo que tú ves
+					p.text-i.animated.fadeInDown Lo que hago
 				.marco-pantalla
 					.cont-pantalla
 						.imagen1
@@ -48,20 +52,26 @@ body
 						.contedor
 							.etiqueta.etiq
 						.poligono
-						p 
-							a.actitudes(href="") Fuerza
-						hr.ln1
-						p 
-							a.actitudes(href="") Perseverante
-						hr.ln1
-						p 
-							a.actitudes(href="") Naturaleza
+							p 
+								a.actitudes(href="") Comprometida
+							hr.ln1
+							p 
+								a.actitudes(href="") Fuerza
+							hr.ln1
+							p 
+								a.actitudes(href="") Perseverante
+							hr.ln1
+							p 
+								a.actitudes(href="") Optimista
+							hr.ln1
+							p 
+								a.actitudes(href="") Naturaleza
 						
 						.contenedor.etiqueta.etiq2
 				.col-sm-9.pd-50
 					.row
 						.col-foto
-							p SARITA ROMAN  
+							p Sarita Román Colonio  
 							hr.ln1
 							p 
 								a.carrera(href="") ECONOMISTA
