--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,10 +1,12 @@
-$Poiret:'Poiret One';
-$Sigmar:'Sigmar One';
+$Poiret:'Noto Serif';
+$Sigmar:'Abril Fatface';
+$titulo-font:'Abril Fatface';
 $bg-color:#ffffff;
-$bg-celeste:#33ccff;
+$bg-celeste:#F2385A;
 $bg-white:#fff;
 $text-color:#FF358B;
 $text-white:#fff;
 $black:#2C3E50;
 $ensayo:rgba(44, 62, 80, 0.15);
 $bg-border:black;
+$bg-rosa:#F2385A;
