--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,9 +1,12 @@
-@import url(https://fonts.googleapis.com/css?family=Poiret+One);
-@import url(https://fonts.googleapis.com/css?family=Sigmar+One);
+@import url(https://fonts.googleapis.com/css?family=Marmelad);
+@import url(https://fonts.googleapis.com/css?family=Abril+Fatface);
+@import url(https://fonts.googleapis.com/css?family=Noto+Serif);
+
 *{
 	padding:0;
 	margin:0;
-	font-family: 'Poiret One';
+	font-family: 'Noto Serif';
+	font-weight:100;
 	font-size:20px;
 	font-weight: bold;
 	box-sizing: border-box;
